--- a/USBread Client/USBread.vcxproj
+++ b/USBread Client/USBread.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="main.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="traymodify.h" />
+    <ClInclude Include="main_utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="USBread.rc" />
